# seek-case-study

./: .gitignore  Dockerfile  README.md  app.py  pinecone_indexing.py  pyproject.toml  requirements-dev.txt  requirements.txt  seek-case-study.ipynb  setup.sh
helpers/: constant.py  data_loader.py  job_analyser_llm.py  pinecone_handler.py
llm/: job_analyser_llm.py
prompts/: job_analyser_system_prompt.txt  job_analyser_user_prompt.txt
vector_database/: pinecone_handler.py
